--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.3",
+    "@hapi/jwt": "^3.2.0",
     "joi": "^17.12.2",
     "mysql2": "^3.9.1",
     "nanoid": "^3.3.4"
